cli/tests/snapshots/golden_suite__defeq_delta_zeta.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef T
  ty: Sort(Succ(Zero))
  val: Ind("Nat", [])

ElaboratedDef id
  ty: Pi(Sort(Succ(Zero)), Pi(Var(0), Var(1), Default, Fn), Default, Fn)
  val: Lam(Sort(Succ(Zero)), Lam(Var(0), Var(0), Default, Fn), Default, Fn)

ElaboratedDef id_nat
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: App(Const("id", []), Ind("Nat", []))

ElaboratedDef zero_T
  ty: Const("T", [])
  val: Ctor("Nat", 0, [])

ElaboratedDef zero_let
  ty: Ind("Nat", [])
  val: LetE(Ind("Nat", []), Ctor("Nat", 0, []), Var(0))

MirBody T
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Unit })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Unit, name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody id
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [Unit], Fn([], [Param(0)], Param(0))) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Unit], Fn([], [Param(0)], Param(0))), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody id_nat
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: GlobalDef("id"), ty: FnItem(DefId(862202992994615439), [], [Unit], Fn([], [Param(0)], Param(0))) })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), Assign(Place { local: Local(2), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Unit })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(1), projection: [] }), args: [Copy(Place { local: Local(2), projection: [] })], destination: Place { local: Local(0), projection: [] }, target: Some(BasicBlock(4)) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: false }, LocalDecl { ty: FnItem(DefId(862202992994615439), [], [Unit], Fn([], [Param(0)], Param(0))), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Unit, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody zero_T
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Nat(0), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody zero_let
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: Nat(0), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Copy(Place { local: Local(1), projection: [] })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [StorageDead(Local(1))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck T
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck id
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck id_nat
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck zero_T
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck zero_let
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
