cli/tests/snapshots/golden_suite__inductives_eq_duplicate_case.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
Diagnostics:
- Error: [F0212] Elaboration error (Value) in 'bad': Duplicate case refl in match on Eq
