cli/tests/snapshots/golden_suite__inductives_eq_elim.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef eq_unit_elim
  ty: Pi(App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Ctor("Unit", 0, [])), App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Ctor("Unit", 0, [])), Default, Fn)
  val: Lam(App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Ctor("Unit", 0, [])), App(App(App(App(App(App(Rec("Eq", [Zero]), Ind("Unit", [])), Ctor("Unit", 0, [])), Lam(Ind("Unit", []), Lam(App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Var(0)), App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Ctor("Unit", 0, [])), Default, Fn), Default, Fn)), App(App(Ctor("Eq", 0, []), Ind("Unit", [])), Ctor("Unit", 0, []))), Ctor("Unit", 0, [])), Var(0)), Default, Fn)

MirBody eq_unit_elim
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(1), [], [Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Unit])], Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Unit])) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Unit])], Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Unit])), name: Some("_0"), is_prop: true, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }], copy_requirements: [[]] }, AdtId(Unit, 17906455645405529692): AdtLayout { adt: AdtId(Unit, 17906455645405529692), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Unit, 17906455645405529692), index: 0 }, fields: [] }], copy_requirements: [[]] }} } }

BorrowCheck eq_unit_elim
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
