cli/tests/snapshots/golden_suite__inductives_nat_match_once_fun.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef five
  ty: Ind("Nat", [])
  val: App(App(Const("repeat_succ", []), Const("three", [])), Const("two", []))

ElaboratedDef repeat_succ
  ty: Pi(Ind("Nat", []), Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Default, FnOnce)
  val: Lam(Ind("Nat", []), App(App(App(App(Rec("Nat", [Succ(Zero)]), Lam(Ind("Nat", []), Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Default, Fn)), Lam(Ind("Nat", []), Var(0), Default, FnOnce)), Lam(Ind("Nat", []), Lam(Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Lam(Ind("Nat", []), App(Ctor("Nat", 1, []), App(Var(1), Var(0))), Default, FnOnce), Default, FnOnce), Default, FnOnce)), Var(0)), Default, FnOnce)

ElaboratedDef three
  ty: Ind("Nat", [])
  val: App(Ctor("Nat", 1, []), App(Ctor("Nat", 1, []), App(Ctor("Nat", 1, []), Ctor("Nat", 0, []))))

ElaboratedDef two
  ty: Ind("Nat", [])
  val: App(Ctor("Nat", 1, []), App(Ctor("Nat", 1, []), Ctor("Nat", 0, [])))

MirBody five
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: GlobalDef("repeat_succ"), ty: FnItemOnce(DefId(5622556281388932476), [], [Nat], FnOnce([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3)), StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), Assign(Place { local: Local(2), projection: [] }, Use(Constant(Constant { literal: GlobalDef("three"), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [StorageLive(Local(3))], terminator: Some(Call { func: Operand(Move(Place { local: Local(1), projection: [] })), args: [Copy(Place { local: Local(2), projection: [] })], destination: Place { local: Local(3), projection: [] }, target: Some(BasicBlock(4)) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1)), StorageLive(Local(4)), Assign(Place { local: Local(4), projection: [] }, Use(Constant(Constant { literal: GlobalDef("two"), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(5) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Operand(Move(Place { local: Local(3), projection: [] })), args: [Copy(Place { local: Local(4), projection: [] })], destination: Place { local: Local(0), projection: [] }, target: Some(BasicBlock(6)) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: FnItemOnce(DefId(5622556281388932476), [], [Nat], FnOnce([], [Nat], Nat)), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }, LocalDecl { ty: FnOnce([], [Nat], Nat), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody repeat_succ
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(5, []), ty: ClosureOnce(Region(1), [], [Nat], FnOnce([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: FnOnce([], [Nat], FnOnce([], [Nat], Nat)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody three
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Nat(3), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody two
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Nat(2), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck five
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck repeat_succ
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck three
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck two
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
