cli/tests/snapshots/golden_suite__inductives_nat_non_exhaustive_match.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
Diagnostics:
- Error: [F0211] Elaboration error (Value) in 'bad': Non-exhaustive match on Nat: missing cases ["succ"]
