cli/tests/snapshots/golden_suite__inductives_vec_unknown_ctor_match.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
Diagnostics:
- Error: Elaboration error (Value) in 'bad': Unknown constructor bogus in match on Vec
