cli/tests/snapshots/golden_suite__list_length.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef len1
  ty: Ind("Nat", [])
  val: App(Const("length", []), Const("singleton", []))

ElaboratedDef length
  ty: Pi(App(Ind("List", []), Ind("Nat", [])), Ind("Nat", []), Default, Fn)
  val: Lam(App(Ind("List", []), Ind("Nat", [])), App(App(App(App(App(Rec("List", [Succ(Zero)]), Ind("Nat", [])), Lam(App(Ind("List", []), Ind("Nat", [])), Ind("Nat", []), Default, Fn)), Ctor("Nat", 0, [])), Lam(Ind("Nat", []), Lam(App(Ind("List", []), Ind("Nat", [])), Lam(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(0)), Default, FnOnce), Default, FnOnce), Default, FnOnce)), Var(0)), Default, Fn)

ElaboratedDef one
  ty: Ind("Nat", [])
  val: App(Ctor("Nat", 1, []), Ctor("Nat", 0, []))

ElaboratedDef singleton
  ty: App(Ind("List", []), Ind("Nat", []))
  val: App(App(App(Ctor("List", 1, []), Ind("Nat", [])), Const("one", [])), App(Ctor("List", 0, []), Ind("Nat", [])))

MirBody len1
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: GlobalDef("length"), ty: FnItem(DefId(17582599937440732758), [], [Adt(AdtId(List, 18281496015322716214), [Nat])], Nat) })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), Assign(Place { local: Local(2), projection: [] }, Use(Constant(Constant { literal: GlobalDef("singleton"), ty: Adt(AdtId(List, 18281496015322716214), [Nat]) })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(1), projection: [] }), args: [Copy(Place { local: Local(2), projection: [] })], destination: Place { local: Local(0), projection: [] }, target: Some(BasicBlock(4)) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: FnItem(DefId(17582599937440732758), [], [Adt(AdtId(List, 18281496015322716214), [Nat])], Nat), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Adt(AdtId(List, 18281496015322716214), [Nat]), name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Param(0)]] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody length
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(4, []), ty: Closure(Region(1), [], [Adt(AdtId(List, 18281496015322716214), [Nat])], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Adt(AdtId(List, 18281496015322716214), [Nat])], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Param(0)]] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody one
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Nat(1), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Param(0)]] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody singleton
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: InductiveCtor(CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, 3, 2), ty: Unit })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(8)), StorageDead(Local(7)), StorageDead(Local(6)), StorageDead(Local(5)), StorageDead(Local(4)), StorageDead(Local(3)), StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), Assign(Place { local: Local(2), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Unit })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [StorageLive(Local(3))], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(1), projection: [] }), args: [Copy(Place { local: Local(2), projection: [] })], destination: Place { local: Local(3), projection: [] }, target: Some(BasicBlock(4)) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1)), StorageLive(Local(4)), Assign(Place { local: Local(4), projection: [] }, Use(Constant(Constant { literal: GlobalDef("one"), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(5) }) }, BasicBlockData { statements: [StorageLive(Local(5))], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(3), projection: [] }), args: [Copy(Place { local: Local(4), projection: [] })], destination: Place { local: Local(5), projection: [] }, target: Some(BasicBlock(6)) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3)), StorageLive(Local(6)), StorageLive(Local(7)), Assign(Place { local: Local(7), projection: [] }, Use(Constant(Constant { literal: InductiveCtor(CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, 1, 0), ty: Unit })))], terminator: Some(Goto { target: BasicBlock(8) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(5), projection: [] }), args: [Copy(Place { local: Local(6), projection: [] })], destination: Place { local: Local(0), projection: [] }, target: Some(BasicBlock(11)) }) }, BasicBlockData { statements: [StorageLive(Local(8)), Assign(Place { local: Local(8), projection: [] }, Use(Constant(Constant { literal: Unit, ty: Unit })))], terminator: Some(Goto { target: BasicBlock(9) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(7), projection: [] }), args: [Copy(Place { local: Local(8), projection: [] })], destination: Place { local: Local(6), projection: [] }, target: Some(BasicBlock(10)) }) }, BasicBlockData { statements: [StorageDead(Local(8)), StorageDead(Local(7))], terminator: Some(Goto { target: BasicBlock(7) }) }, BasicBlockData { statements: [StorageDead(Local(6)), StorageDead(Local(5))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Adt(AdtId(List, 18281496015322716214), [Nat]), name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: Fn([], [Unit], Fn([], [Param(0)], Fn([], [Adt(AdtId(List, 18281496015322716214), [Param(0)])], Adt(AdtId(List, 18281496015322716214), [Param(0)])))), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Unit, name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Fn([], [Param(0)], Fn([], [Adt(AdtId(List, 18281496015322716214), [Param(0)])], Adt(AdtId(List, 18281496015322716214), [Param(0)]))), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Fn([], [Adt(AdtId(List, 18281496015322716214), [Param(0)])], Adt(AdtId(List, 18281496015322716214), [Param(0)])), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Adt(AdtId(List, 18281496015322716214), [Nat]), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: Fn([], [Unit], Adt(AdtId(List, 18281496015322716214), [Param(0)])), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Unit, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Param(0)]] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck len1
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck length
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck one
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck singleton
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
