cli/tests/snapshots/golden_suite__lower_match.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef add_one
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(0)), Default, Fn)

ElaboratedDef match_nat
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), App(App(App(App(Rec("Nat", [Succ(Zero)]), Lam(Ind("Nat", []), Ind("Nat", []), Default, Fn)), Ctor("Nat", 0, [])), Lam(Ind("Nat", []), Lam(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(1)), Default, FnOnce), Default, FnOnce)), Var(0)), Default, Fn)

MirBody add_one
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody match_nat
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(3, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck add_one
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck match_nat
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
