cli/tests/snapshots/golden_suite__lowering_recursor_eq.snap
---
source: cli/tests/golden_suite.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef eq_unit_elim
  ty: Pi(App(App(App(Ind("Eq", []), Ind("Unit", [])), Const("unit", [])), Const("unit", [])), App(App(App(Ind("Eq", []), Ind("Unit", [])), Const("unit", [])), Const("unit", [])), Default, Fn)
  val: Lam(App(App(App(Ind("Eq", []), Ind("Unit", [])), Const("unit", [])), Const("unit", [])), App(App(App(App(App(App(Rec("Eq", [Zero]), Ind("Unit", [])), Ctor("Unit", 0, [])), Lam(Ind("Unit", []), Lam(App(App(App(Ind("Eq", []), Ind("Unit", [])), Ctor("Unit", 0, [])), Var(0)), App(App(App(Ind("Eq", []), Ind("Unit", [])), Const("unit", [])), Const("unit", [])), Default, Fn), Default, Fn)), App(App(Const("refl", []), Ind("Unit", [])), Const("unit", []))), Ctor("Unit", 0, [])), Var(0)), Default, Fn)

MirBody eq_unit_elim
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(2, []), ty: Closure(Region(1), [], [Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Opaque("ctor Unit"), IndexTerm(Ctor("Unit", 0, []))])], Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Opaque("ctor Unit"), IndexTerm(Ctor("Unit", 0, []))])) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Opaque("ctor Unit"), IndexTerm(Ctor("Unit", 0, []))])], Adt(AdtId(Eq, 7478576897359074100), [Adt(AdtId(Unit, 17906455645405529692), []), Opaque("ctor Unit"), IndexTerm(Ctor("Unit", 0, []))])), name: Some("_0"), is_prop: true, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }] }, AdtId(Unit, 17906455645405529692): AdtLayout { adt: AdtId(Unit, 17906455645405529692), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Unit, 17906455645405529692), index: 0 }, fields: [] }] }} } }

BorrowCheck eq_unit_elim
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
